--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,8 +63,23 @@
             margin-bottom: 5px;
             border: 1px solid #ccc;
             width: 300px;
-            display: inline-block;
             text-align: left;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .delete-btn {
+            background-color: #ff4d4d;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 5px 10px;
+            font-size: 0.8em;
+            margin-left: 5px;
+        }
+
+        .delete-btn:hover {
+            background-color: #e63c3c;
         }
     </style>
 </head>
@@ -72,15 +88,18 @@
 <h1>htmx Todo App</h1>
 
 <!-- Form to add a new todo -->
-<form hx-post="/api/todos" hx-target="#todos" onsubmit="return false;">
-    <input type="text" name="task" placeholder="Add a new todo" required>
+<form hx-post="http://localhost:3000/todos" hx-target="#todos" onsubmit="return false;">
+    <input type="text" name="task" placeholder="What do you have to do?" required>
     <button type="submit">Add</button>
 </form>
 
 <!-- List of todos -->
-<ul id="todos" hx-get="/api/todos">
+<ul id="todos" hx-get="http://localhost:3000/todos">
     <!-- This list will be populated with todos from the server -->
 </ul>
+
+<!-- Button for refreshing the list -->
+<button hx-get="http://localhost:3000/todos" hx-target="#todos">Refresh List</button>
 
 <script>
     // You can add additional scripts here if needed
